Test/4-12_cluster.clu
Cluster size 4
Cluster number 120104       # E:      Factor:7  P:  , Ori size:4    Sub:4    From:12          
   4    12    fam_4_1           1-120      1   leng: 119
   4    12    fam_4_2           1-120      1   leng: 119
   4    12    fam_4_3           1-120      1   leng: 119
   4    12    fam_4_4           1-120      1   leng: 119
